Added strains to SI table

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -797,3 +797,19 @@ The authors have declared no competing interest.},
    url = {https://www.nature.com/articles/s41596-019-0216-9},
    year = {2019},
 }
+@article{Wertman1986,
+   abstract = {A class of recombinant phage λ clones are recovered from human genomic libraries on Escherichia coli recB21 recC22 sbcB15 cells, which fail to form plaques on wild-type cells. We report experiments which address the mechanism of this inhibition. The introduction of the recombination-stimulating sequence chi into one such clone allows growth of this phage on Rec+ cells. In addition, the insertion of λ gam+ gene into a rec+ -inhibited clone results in the ability of the phage to form plaques on wild-type cells. Since λ Gam protein is an inhibitor of host RecBC enzyme, we tested a collection of such phage for growth on a variety of hosts altered in RecBC function. Host permissiveness correlated with the inactivation of the RecBC nucleolytic activities and not with the recombinational activities. These observations suggest that the inserted DNA sequences of these phage limit the production of packageable chromosomes. This conclusion is easily reconciled with our current knowledge of the interaction of the host recombination systems with λ replication and encapsidation. Based on these experiments we have constructed strains, both recombination-proficient and recombination-deficient, which serve as improved hosts for the recovery of genomic sequences which are otherwise inhibitory to the growth of phage L. © 1986.},
+   author = {Kenneth F. Wertman and Arlene R. Wyman and David Botstein},
+   doi = {10.1016/0378-1119(86)90286-6},
+   issn = {0378-1119},
+   issue = {2},
+   journal = {Gene},
+   keywords = {RecBC enzyme,Recombinant DNA,Spi- phenotype,chi site,genomic libraries,palindromes,rec+ -inhibited phenotype,recD},
+   month = {1},
+   pages = {253-262},
+   pmid = {2952553},
+   publisher = {Elsevier},
+   title = {Host/vector interactions which affect the viability of recombinant phage lambda clones},
+   volume = {49},
+   year = {1986},
+}
