--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -42,9 +42,11 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
         \midrule
         MEK2623 & MG1655 \textit{recB::halotag recA::syfp2} & this work\\
         MEK2622 & MG1655 \textit{recB::halotag $\Delta$recA} & this work \\ % = AL133_1
+        AL139-3 & MG1655 \textit{recB1080::halotag} & this work \\ % = AL139_3, no MEK ref?
         MEK2324 & MG1655 \textit{recB1080::halotag HK022::psfiA-GFP} &  \\ % Alessia's article
         MEK65 & MG1655 \textit{recB::halotag} & \cite{Lepore2019a} \\
-        BHC9 & MG1655 \textit{$\Delta$recA} & Ref? \\
+        AL119 & MG1655 \textit{recB::halotag pBad::GamL} & this work \\ % = AL119, no MEK ref?
+        DL654 & MG1655 \textit{$\Delta$recA} & \cite{Wertman1986} \\
         \bottomrule
     \end{tabular}
     \caption{List of bacterial strains used in this study}
