--- a/Article.tex
+++ b/Article.tex
@@ -57,9 +57,8 @@ meriem.elkaroui\at ed.ac.uk
 
 
 \begin{acknowledgements}
-- David Leach for insightful discussions
-
-- Jean for BACMMAN/software developments
+% - David Leach for insightful discussions
+% - Jean for BACMMAN/software developments
 \end{acknowledgements}
 
 \section*{Bibliography}
