--- a/Results.tex
+++ b/Results.tex
@@ -88,20 +88,20 @@ Whereas the lifetime of the fluorescent spots informs us on how long RecB stays 
 \end{figure*}
 
 %% We see a strong accumulation of RecA filaments (RecA foci seem to be transient and their number decreases over time)
-To paint a more complete picture of the DNA repair process during ciprofloxacin exposure, we imaged the RecA protein fused to the fluorescent protein SYFP2. Figure \ref{Fig:reca_nucleoid}A shows the RecA-associated fluorescence in cells that have been exposed to different concentrations of ciprofloxacin for 60 minutes. In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus. This is consistent with cells undergoing occasional endogenous DNA damage. As the ciprofloxacin concentration increases, RecA foci become more frequent, as well as filament structures.
+To paint a more complete picture of the DNA repair process during ciprofloxacin exposure, we imaged the RecA protein fused to the fluorescent protein SYFP2. Figure \ref{Fig:reca_nucleoid}A shows the RecA-associated fluorescence in cells that have been exposed to different concentrations of ciprofloxacin for 60 minutes. In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus. This is consistent with cells undergoing occasional endogenous DNA damage. As the ciprofloxacin concentration increases, RecA foci became more frequent, as well as filament structures.
 
-To quantify more precisely the occurrence of foci and filaments at the different ciprofloxacin concentrations and durations of exposure, we used a deep-learning model to automatically classify cells depending on the presence of a focus, a filament, or neither of these structures (Figure \ref{Fig:reca_nucleoid}D). The proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%), after one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL. RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
+To quantify more precisely the occurrence of foci and filaments at the different ciprofloxacin concentrations and durations of exposure, we used a custom-made deep-learning model to automatically classify cells depending on the presence of a focus, a filament, or neither of these structures (Figure \ref{Fig:reca_nucleoid}B, Supp. Figure \ref{SIFig:object_class}). The proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%). After one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL. RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
 
 %% We imaged nucleoid and RecB in the same experiment
 %% Ciprofloxacin exposure causes nucleoid compaction and centring
-In \emph{E. coli}, the loading of RecA on DNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid.\cite{Odsbu2014} To see if this was true for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomittantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:reca_nucleoid}C shows representative images of the nucleoid and DNA bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, which is consistent with cells growing exponentially, with high DNA replication activity. Upon exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of the nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/mL of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). This compaction was accompanied by a centring of the nucleoid along the cell's long axis. Supp. Figure \ref{SIFig:nucleoid_position} shows that upon increasing exposure to ciprofloxacin (in time and concentration), the cells elongate, and nucleoids were increasingly centred.
+In \emph{E. coli}, the loading of RecA on DNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid.\cite{Odsbu2014} To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomittantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:reca_nucleoid}C shows representative images of the nucleoid and DNA-bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, which is consistent with cells growing exponentially, with high DNA replication activity. Upon exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of the nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/mL of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). This compaction was accompanied by a centring of the nucleoid along the cell's long axis. Supp. Figure \ref{SIFig:nucleoid_position} shows that upon increasing exposure to ciprofloxacin (in time and concentration), the cells elongate, and nucleoids were increasingly centred.
 
 %% Nucleoid and RecB position are correlated
 %% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to RecB recruitment rate, explain it happens after several rounds of DSBs)
-As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure\ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D show the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remain within $\sim$2 µm either side of the cell centre, despite the cell having elongated significantly. This behaviour is expected, since RecB binds to DNA. At the higher ciprofloxacin concentrations, most cells will undergo multiple DSBs over the course of the experiment (Figure \ref{Fig:lifetime_fits}D). Therefore, the first DSB will induce the SOS response and nucleoid compaction, while later DSBs occurring on the already-compacted nucleoid will result in RecB molecules being recruited on DNA at the centre of the cell.
+As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure \ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D show the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remained within $\sim$2 µm either side of the cell centre, despite the cells having elongated significantly.
 
 %% Overall conclusion on RecA filaments, nucleoid compaction, and correlation of DNA-bound RecB position with nucleoid density
-Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the break site, which we were able to detect as bright foci and filaments. At the lower (sub-MIC) ciprofloxacin concentrations, these structures were present in a low proportion of cells (10-20\%). At higher ciprofloxacin concentrations, RecA filaments were present in a large fraction of the cells (up to 40\%), hinting at an accumulation of long-lived RecA filaments unable to find a homologous sequence for repair. RecA loading on DNA also induces the SOS response. As a result, we observed compaction and centring of the bacterial nucleoid. DNA-bound RecB molecules were also found to be centred in elongated cells, consistently with DSBs forming on nucleoids that are already compacted and centred.
+Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the break site, which we were able to detect as bright foci and filaments. At the lower (sub-MIC) ciprofloxacin concentrations, these structures were present in a low proportion of cells (10-20\%). At higher ciprofloxacin concentrations, RecA filaments were present in a large fraction of the cells (up to 40\%), hinting at an accumulation of long-lived RecA filaments unable to find a homologous sequence for repair. RecA loading on DNA also induces the SOS response. As a result, we observed compaction and centring of the bacterial nucleoid. DNA-bound RecB molecules were also found to be centred in elongated cells, consistently with DSBs forming on compacted nucleoids.
 
 % Part 4: Mutants in the repair pathway
 \subsection*{RecB dissociation does not depend on RecA loading}
@@ -109,13 +109,15 @@ Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the bre
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.75\textwidth]{Figures/Fig4_mutants.pdf}
-    \caption{RecB binding to DNA in the \dreca\ and \teneighty\ mutant strains in the absence and presence of ciprofloxacin (30 ng/mL). \textbf{(A)} Representative images of RecB-associated fluorescence. RecB spots are indicated by arrows, and segmented cell outlines are shown in grey. \textbf{(B)} Fitted lifetimes of RecB molecules on DNA. Black dots show individual datasets, and bars the median values. \textbf{(C)} Rate of recruitment of RecB to the DNA. Black dots show individual datasets, and bars the median values. \textbf{(D)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green). Segmented cell outline shown in grey. \textbf{(E)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis.}
+    \caption{RecB binding to DNA in the \dreca\ and \teneighty\ mutant strains in the absence and presence of ciprofloxacin (30 ng/mL). \textbf{(A)} Representative brightfield images of wild-type (WT), \dreca\ and \teneighty\ mutants cells, in the presence and absence of ciprofloxacin (30 ng/mL). \textbf{(B)} Fitted lifetimes of RecB molecules on DNA. Black dots show individual datasets, and bars the median values. \textbf{(C)} Rate of recruitment of RecB to the DNA. Black dots show individual datasets, and bars the median values. \textbf{(D)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green). Segmented cell outline shown in grey. \textbf{(E)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis.}
     \label{Fig:mutants}
 \end{figure*}
 
 %% Fitting spot lifetime histograms with bi-exponential model
-To better understand the factors that contribute to the dissociation of RecB from the DNA, we imaged two different mutants (\dreca\ and \teneighty), in the presence or absence of 30 ng/mL ciprofloxacin.
-% Here comment on panel A: images of cells + RecB spots
+To better understand the factors that contribute to the dissociation of RecB from DNA, we imaged two different mutants (\dreca\ and \teneighty), in the presence and absence of 30 ng/mL ciprofloxacin. Figure \ref{Fig:mutants} shows brightfield images of cells that were not exposed to ciprofloxacin, and cells that were exposed to 30 ng/mL ciprofloxacin for 60 min.
+% Add SI Fig with cell lengths
+
+% DNA binding lifetimes
 As for the wild-type (WT) strain, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the slower rate, corresponding to the dissociation of DNA-bound RecB molecules. The corresponding lifetimes for DNA-bound RecB are shown on Figure \ref{Fig:mutants}B. In the \dreca\ mutant, the DNA-binding lifetime of RecB is similar to the wild-type ($\sim$10 sec). This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of RecBCD from DNA. Both in the presence and absence of ciprofloxacin, \teneighty\ stays bound to DNA for longer than wild-type RecB ($\sim$20 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
 
 %% RecB recruitment rate
