Added SI fig for mutants cell length

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -171,6 +171,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:recb_nucleoid_timepoints}
 \end{suppfigure*}
 
+% Mutants: cell lengths upon exposure to ciprofloxacin
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_cell_lengths.pdf}
+    \end{center}
+    \caption{Evolution over time of the cell length of wild-type and mutant \emph{E. coli} strains exposed or not to ciprofloxacin (30 ng/mL). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between datasets.}
+    \label{SIFig:mutants_cell_lengths}
+\end{suppfigure*}
+
 % Mutants: RecB spot lifetime histogram bi-exp fits
 \begin{suppfigure*}[htbp]
     \begin{center}
