Added SI Fig on compaction of the nucleoid in mutants

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -188,3 +188,12 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \caption{RecB spot lifetime histograms for wild-type (WT), \dreca and \teneighty\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines).}
     \label{SIFig:mutants_biexp_fits}
 \end{suppfigure*}
+
+% Mutants: nucleoid compaction
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\textwidth]{SI_Figures/Mutants_nucleoid_compaction.pdf}
+    \end{center}
+    \caption{Histograms of the fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells and the \dreca\ and \teneighty\ mutants.}
+    \label{SIFig:mutants_nucleoid_compaction}
+\end{suppfigure*}
