Added refs for full chromosome degradation by drecA

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,32 @@
+@article{Capaldo1975,
+   abstract = {Using a method to separate dividing from non-dividing cells of Rec- strains of Escherichia coli K12 (Capaldo & Barbour, 1973), we found: 1. (1) Non-dividing cells of recA-, recB-recC- and recA-recB-recC- strains are defective in DNA synthesis. 2. (2) recA- non-dividing cells contain little or no DNA; recB-recC- and recA-recB-recC- non-dividing cells contain normal amounts of DNA. 3. (3) DNA synthesized in cultures of the recB-recC- and recA-recB-recC- strains is made in the dividing cells and then segregated irreversibly, as a function of subsequent cell division, into the non-dividing cells. 4. (4) Old DNA in recA-recB-recC- cells contains an increased number of single-strand breaks compared to newly synthesized DNA of the same strain or to both old and new DNA from rec+ cells; no additional breaks in old DNA of the recB-recC- strain have been detected. We propose that recA+, recB+, recC+ gene products are involved in repair of DNA chain breaks that arise during cell growth. According to this view, mutation in the rec genes results in defective repair. This may lead to failure to replicate DNA, loss of viability, degradation of the DNA in the case of the recA- strain, and accumulation of DNA chain breaks in the recA-recB-recC- strain. © 1978.},
+   author = {Florence N. Capaldo and Stephen D. Barbour},
+   doi = {10.1016/0022-2836(75)90371-X},
+   issn = {0022-2836},
+   issue = {1},
+   journal = {Journal of Molecular Biology},
+   month = {1},
+   pages = {53-66},
+   pmid = {1102696},
+   publisher = {Academic Press},
+   title = {DNA content, synthesis and integrity in dividing and non-dividing cells of rec- strains of Escherichia coli K12},
+   volume = {91},
+   year = {1975},
+}
+@article{Skarstad1993,
+   abstract = {Rapidly growing wild-type Escherichia coli cells contain two, four, or eight fully replicated chromosomes after treatment with rifampin, reflecting that all replication origins are initiated simult...},
+   author = {K. Skarstad and E. Boye},
+   doi = {10.1128/JB.175.17.5505-5509.1993},
+   issn = {00219193},
+   issue = {17},
+   journal = {Journal of Bacteriology},
+   pages = {5505-5509},
+   pmid = {8366035},
+   title = {Degradation of individual chromosomes in recA mutants of Escherichia coli},
+   volume = {175},
+   url = {https://journals.asm.org/doi/10.1128/jb.175.17.5505-5509.1993},
+   year = {1993},
+}
 @article{Lepore2019a,
    abstract = {Cell biology is increasingly dependent on quantitative methods resulting in the need for microscopic labelling technologies that are highly sensitive and specific. Whilst the use of fluorescent proteins has led to major advances, they also suffer from their relatively low brightness and photo-stability, making the detection of very low abundance proteins using fluorescent protein-based methods challenging. Here, we characterize the use of the self-labelling protein tag called HaloTag, in conjunction with an organic fluorescent dye, to label and accurately count endogenous proteins present in very low numbers (<7) in individual Escherichia coli cells. This procedure can be used to detect single molecules in fixed cells with conventional epifluorescence illumination and a standard microscope. We show that the detection efficiency of proteins labelled with the HaloTag is ≥80%, which is on par or better than previous techniques. Therefore, this method offers a simple and attractive alternative to current procedures to detect low abundance molecules.},
    author = {Alessia Lepore and Hannah Taylor and Dirk Landgraf and Burak Okumus and Sebastián Jaramillo-Riveri and Lorna McLaren and Somenath Bakshi and Johan Paulsson and M. El Karoui},
