Italicised dreca command

--- a/Article.tex
+++ b/Article.tex
@@ -6,7 +6,7 @@
 \usepackage{multirow}
 \usepackage{upgreek}
 
-\newcommand{\dreca}{$\Delta$recA} % ΔrecA
+\newcommand{\dreca}{$\Delta$\textit{recA}} % ΔrecA
 \newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
 \newcommand{\od}{OD$_{600}$} % OD600
 \newcommand{\umsq}{$\upmu$m$^2$} % µm2
