--- a/Methods.tex
+++ b/Methods.tex
@@ -1,20 +1,20 @@
 \section*{Materials and Methods}
 
 \subsection*{Strain construction}
-The \textit{E. coli} MG1655 strain and derivatives were used in this study. A list of all strains and plasmids used are presented in Supp. Tables \ref{SItab:strains} and \ref{SItab:plasmids}.
-The MEK2623 strain (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones that received the correct insert were selected on Kanamycin plates, and checked by Sanger sequencing. The MEK2622 (\dreca) strain was constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 as a receiver.
+\textit{E. coli} MG1655 and derivatives were used in this study. A list of all strains and plasmids used are presented in Supp. Tables \ref{SItab:strains} and \ref{SItab:plasmids}.
+MEK2623 (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones were selected on Kanamycin plates, and checked by Sanger sequencing. MEK2622 (\dreca) was constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 as a receiver. MEK2324 and AL139-3 (\teneighty) were constructed by XXXXXX. AL119 was obtained by transforming the pDT6 plasmid (gift from Mark Dillingham) into the MEK65 strain by heat-shock.
 
 \subsection*{Microscopy samples}
 For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) glucose, 2 mM MgSO$_4$, 0.1 mM CaCl$_2$, 1X MEM Essential and MEM non-essential amino acids (Gibco).
 \subsubsection*{Cell culture}
-On the day before the experiment, 5 mL of medium was inoculated using a -80\celsius\ glycerol stock. The cells were grown overnight at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
-Alternatively, a 15 mL culture was inoculated using a glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, in order to keep them at a constant \od\ of 0.2.
+Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
+Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, in order to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius, shaking at 150 rpm.
+A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
-When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above (1h at 37\celsius, shaking 150 rpm).
+When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above.
 \subsubsection*{Dye removal}
-The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube (to avoid the dye sticking to the plastic of the tube). This procedure was repeated 3 times to fully remove unbound dye, and the cells were finally resuspended in 200 µL medium. The same procedure was applied to wash off the JF549 and Sytox Green dyes.
+The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Sample preparation}
 Agar-pads were prepared by dissolving 2\% agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agar-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agar-pad, and left to settle for 10 min at 37\celsius\ before imaging.
 
@@ -23,16 +23,7 @@ Agar-pads were prepared by dissolving 2\% agarose in culture medium. In experime
 Imaging was performed using an inverted microscope (Nikon Ti-E) equipped with a 100X TIRF Nikon objective (NA 1.49, oil immersion) and a 1.5X Nikon magnification lens (pixel size = 107 nm). Fluorescence excitation was achieved using 488- and 561-nm lasers (Coherent OBIS) in HILO (Highly Inclined Laminar Optical sheet) configuration. Excitation light and fluorescence emission were separated using a dual-wavelength dichroic filter (TRF59904, Chroma), and the fluorescence signal was detected on an EMCCD (Electron Multiplying Charge-Coupled Device) camera (iXion Ultra 897, Andor). The hardware was controlled and images were saved using MetaMorph (Molecular Devices; v7.8.13.0). The HILO configuration was established using the iLas variable angle TIRF control window. All experiments were performed at 37\celsius, using an Okolab microscope cage incubator equipped with dark panels.
 
 \subsubsection*{Data acquisition}
-For each sample, a Metamorph journal was used to acquire images on 40 different positions, each separated by 200 µm. The full camera sensor (512x512 pixels) was used. At each position, the acquisition parameters were as follows:
-
-\paragraph*{Brightfield} A single brightfield Z-stack (16 images with step 0.2 µm, total range 3 µm centred on the focus) was acquired first. The exposure time was 30 ms, and no electron-multiplying (EM) camera gain was applied.
-
-\paragraph*{JF549 fluorescence} Single fluorescence images were acquired every 2 sec (unless specified otherwise) under 561-nm excitation at $\sim$2 mW with an exposure time of 1 sec and EM camera gain of 150.
-
-\paragraph*{SYFP2 fluorescence} When imaging the RecA-SYFP2 fusion, single fluorescence images were interleaved with the 561-nm excitation. SYFP2 fluorescence was excited at 488 nm ($\sim$2 mW), with an exposure time of 50 ms and EM camera gain of 100.
-
-\paragraph*{Nucleoid imaging} Sytox Green fluorescence was excited at 488 nm ($\sim$2 mW) with an exposure time of 50 ms and an EM camera gain of 100. A single image was acquired for each position.
-
+For each sample, a Metamorph journal was used to acquire images on 40 different positions, each separated by 200 µm. The full camera sensor (512x512 pixels) was used. Acquisition parameters are described in Supp. Table \ref{SItab:acquisition_channels}.
 
 \subsection*{Data analysis}
 The general data analysis workflow is described in Supp. Figure \ref{SIFig:analysis_workflow}. In brief, after acquisition, the raw microscopy images were stored in .tif format on a dedicated Omero server (OME). They were directly accessed by the BACMMAN ImageJ plugin\cite{Ollion2019}, which performed image processing tasks such as denoising of fluorescence images, cell segmentation (including manual curation of incorrectly segmented cells), nucleoid segmentation, and fluorescent spot detection. Measurement tables in CSV format were exported from BACMMAN and loaded in Jupyter Notebooks using the \href{https://gitlab.com/MEKlab/pyberries}{PyBerries package} (version 0.2.22) in Python (version 3.11). The data tables were manipulated using PyBerries and the pandas library (version 2.2.0). Figures were generated in Jupyter Notebooks using the Seaborn library (version 0.13.2). Figures that contained several panels were assembled in Inkscape (version 1.3.2).
@@ -48,7 +39,7 @@ The 16-image brightfield Z-stack was first cropped to 5 images on one side of th
 Fluorescent spots were seg\-men\-ted using a seeded watershed algorithm on the Laplacian transform of the denoised RecB image. The quality of the segmentation was visually assessed by overlaying the segmentation mask on the raw fluorescence images. The segmentation parameters were optimised, but no manual curation was applied to avoid introducing user bias in the results.
 
 \paragraph*{Classification of RecA structures}
-Due to the large diversity in the shape and intensity of structures formed by RecA during the repair process, segmentation by a rule-based algorithm (such as performed for the RecB spots) is challenging. We therefore designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence, RecA spot, or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of manually labelled data that was not used in training.
+We designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence, RecA spot, or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of manually labelled data that was not used in training.
 
 \paragraph*{Nucleoid segmentation}
 Sytox Green fluorescence images were processed with a rolling-ball noise subtraction (radius 6 pixels), and nucleoids segmented by a seeded watershed algorithm. The seed threshold was determined by Otsu's method\cite{Otsu1979}. Any segmented regions that were in contact with each other within the same cell were merged, and segmented regions smaller than 5 pixels were excluded. Regions with weak signal-to-noise ratio (SNR < 2) were also excluded. For each segmented region, the SNR was computed as follows:
@@ -70,7 +61,7 @@ The binding time of individual RecB molecules on DNA was extracted in BACMMAN as
 Because we are unable to differentiate whether the disappearance of a fluorescent spot is due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we must consider that the fitted "spot disappearance rates" $k_1$ and $k_2$ are a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
 \paragraph*{Thresholding to differentiate short- and long-lived RecB binding events}
-For Figures that required classifying RecB spots as either short- or long-lived events, a spot lifetime threshold was determined for each dataset from the bi-exponential fits, such that spots that had a lifetime longer than the threshold had a 99\% probability of being in the "long-lived" population. Of note, spots with a lifetime shorter than this threshold could not reliably be attributed to one or the other population.
+To classify RecB spots as either short- or long-lived events, a spot lifetime threshold was determined for each dataset from the bi-exponential fits, such that spots that had a lifetime longer than the threshold had a 95\% probability of being in the "long-lived" population. Spots with a lifetime shorter than this threshold could not reliably be attributed to one or the other population.
 
 \subsection*{Code availability}
 Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The Jupyter Notebooks used to make the article figures are also available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
